--- a/gb/12/6/26/n3621008.md
+++ b/gb/12/6/26/n3621008.md
@@ -1,56 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lespav3613/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lespav3613/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lespav3613/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lespav3613/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lespav3613/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lespav3613/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lespav3613/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>餐旅毕业生游台湾 炒出人情味</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2012年06月26日讯】（大纪元记者陈素琴台湾台南市报导）由台首大餐旅系毕业生杨柏伟、曾世超、杨锦州、潘依怜、郑吉棠及陈文豪等人组成的“青年壮游台湾”台湾首府大学代表队，在毕业典礼结束后就展开“烧出台湾菜、炒出人情味”的机车环岛壮举，不但体会到浓浓的人情味，还把各地方的名产结合，烧出不一样的台湾菜。一行人，甫结束行程返校，并在校园内把此趟行程搜集的食材加以料理，秀出此行的成绩并分享给全校师生。 </p> <p>在双台侵台前，提前结束行程返校，返校后并把沿途搜集来的食材，在校园内现场烹调，杨柏伟等人以宜兰三星的青葱，搭配在南投农家所赠送的有机栽培香菇，并佐上蚝油，一道美味新鲜的香菇料理香味四溢。</p> <p>杨柏伟表示，台湾每个地方都有知名的食材，台湾之旅就是要到当地研究，为何这些食材在该地特别有名，并把知名的食材加以结合，碰撞出更加美味的料理，如他们曾在嘉义东石乡，以酥炸的青蚵，再调味时加入东山的咖啡粉，结果酥嫩的青蚵中，还夹带浓浓的咖啡香，当地的众试过都说好吃。</p> <p>郑吉棠也说，因没有事先与要去的当地农家预约，原本很担心农家会不欢迎我们突然的造访，没想到去的时候，农民朋友们都相当热情，即使他们家中无法容纳我们团队借宿，他们也会带我们到邻近的友人家借宿，大家都相当热情。</p> <p>杨柏伟等人返校后，把沿途所拍摄下来的照片及影片加以整理，成为他们结束校园生活后的人生最佳回忆。◇</p> <p>（责任编辑：李薇）</p> 
+<p>【大纪元2012年06月26日讯】（大纪元记者陈素琴台湾台南市报导）由台首大餐旅系毕业生杨柏伟、曾世超、杨锦州、潘依怜、郑吉棠及陈文豪等人组成的“青年壮游台湾”台湾首府大学代表队，在毕业典礼结束后就展开“烧出台湾菜、炒出人情味”的机车环岛壮举，不但体会到浓浓的人情味，还把各地方的名产结合，烧出不一样的台湾菜。一行人，甫结束行程返校，并在校园内把此趟行程搜集的食材加以料理，秀出此行的成绩并分享给全校师生。 </p>
+<p>在双台侵台前，提前结束行程返校，返校后并把沿途搜集来的食材，在校园内现场烹调，杨柏伟等人以宜兰三星的青葱，搭配在南投农家所赠送的有机栽培香菇，并佐上蚝油，一道美味新鲜的香菇料理香味四溢。</p>
+<p>杨柏伟表示，台湾每个地方都有知名的食材，台湾之旅就是要到当地研究，为何这些食材在该地特别有名，并把知名的食材加以结合，碰撞出更加美味的料理，如他们曾在嘉义东石乡，以酥炸的青蚵，再调味时加入东山的咖啡粉，结果酥嫩的青蚵中，还夹带浓浓的咖啡香，当地的众试过都说好吃。</p>
+<p>郑吉棠也说，因没有事先与要去的当地农家预约，原本很担心农家会不欢迎我们突然的造访，没想到去的时候，农民朋友们都相当热情，即使他们家中无法容纳我们团队借宿，他们也会带我们到邻近的友人家借宿，大家都相当热情。</p>
+<p>杨柏伟等人返校后，把沿途所拍摄下来的照片及影片加以整理，成为他们结束校园生活后的人生最佳回忆。◇</p>
+<p>（责任编辑：李薇）</p>
+
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/9/3/3/n2448816.md#1">台青辅会提供基金 青年壮游台湾计划开跑</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/9/11/9/n2716724.md#1">青年壮游台湾  青辅会补助最高7万元</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/10/7/5/n2957932.md#1">青年壮游台湾  探寻在地故事</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/5/15/n3257606.md#1">马英九带头骑  号召青年壮游台湾</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/6/24/n3296198.md#1">台湾首府大学华语研习营</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/7/24/n3324302.md#1">台首大乐龄大学60余位阿公阿嬷结业式</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/9/13/n3371682.md#1">教科书流通书局 买书省很大</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/11/8/n3424475.md#1">首大陈玺聘 冰雕明日之星</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/11/12/11/n3454585.md#1">台首大捐脚踏车助家扶学生</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/12/1/7/n3479473.md#1">首府大学泰国参访团收获丰硕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/3/3/n2448816.md#1">台青辅会提供基金 青年壮游台湾计划开跑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/11/9/n2716724.md#1">青年壮游台湾  青辅会补助最高7万元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/7/5/n2957932.md#1">青年壮游台湾  探寻在地故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/5/15/n3257606.md#1">马英九带头骑  号召青年壮游台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/24/n3296198.md#1">台湾首府大学华语研习营</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/7/24/n3324302.md#1">台首大乐龄大学60余位阿公阿嬷结业式</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/9/13/n3371682.md#1">教科书流通书局 买书省很大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/11/8/n3424475.md#1">首大陈玺聘 冰雕明日之星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/12/11/n3454585.md#1">台首大捐脚踏车助家扶学生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/1/7/n3479473.md#1">首府大学泰国参访团收获丰硕</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/4/19/n12891294.md#1">道门出败类 张三丰出手示警</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/19/n12961042.md#1">恶人有恶报 上天明示以警世人</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/22/n12967053.md#1">【秦鹏直播】美韩峰会高声护台 抗共态度日坚</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/22/n12967392.md#1">【珍言真语】香山夕阳：中共布风水凶局祸港</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12966775.md#1">【远见快评】中东休战 台曝重磅消息 北京紧张</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12965474.md#1">统一发票1-2月千万大奖5张未领 消费地点公布</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12965891.md#1">20大后习近平何去何从 国际专家析各种可能</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12964363.md#1">晒大束玫瑰表白汪峰 章子怡结婚6年被宠成公主</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12963896.md#1">与陈思诚520宣布离婚 佟丽娅婚礼照现惊人巧合</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12966735.md#1">郝蕾揭大陆娱乐圈乱象：挤破头是为了名和利</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12966897.md#1">李云迪晒与孙俪一家合照 等等与小花正面曝光</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12965047.md#1">BTS盼再挑战葛莱美奖 《Butter》95区iTunes登顶</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12964027.md#1">新冠肺炎11大症状一次看！5种症状立刻看急诊</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12965637.md#1">连日确诊破百 台湾能在2周内让疫情平复吗？</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/21/n12964747.md#1">小满节气湿气、热气都重！中医推荐去湿特效食物</a></li>
-<li><a href="https://github.com/lespav3613/djy/blob/master/gb/21/5/22/n12968191.md#1">达尔文拱门坍塌 龟岛物种被质疑非进化而来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lespav3613/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lespav3613/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/26/n3621008.htm">餐旅毕业生游台湾 炒出人情味</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/26/n3621008.htm">餐旅毕业生游台湾 炒出人情味</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lespav3613/djy/blob/master/gb/12/6/26/n3621008.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lespav3613/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lespav3613/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lespav3613/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lespav3613/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lespav3613/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/12/6/26/n3621008.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
